--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -31,11 +31,12 @@
   .bm-menu-wrap {
     position: fixed;
     height: 100%;
+    width: fit-content !important
   }
    
   /* General sidebar styles */
   .bm-menu {
-    background: #373a47;
+    background: white;
     padding: 2.5em 1.5em 0;
     font-size: 1.15em;
   }
@@ -47,8 +48,9 @@
    
   /* Wrapper for item list */
   .bm-item-list {
+    display: flex;
+    flex-direction: column;
     color: #b8b7ad;
-    padding: 0.8em;
   }
    
   /* Individual item */
@@ -59,4 +61,14 @@
   /* Styling of overlay */
   .bm-overlay {
     background: rgba(0, 0, 0, 0.3);
+  }
+
+  #links-list{
+    display: flex;
+    flex-direction: column;
+  }
+
+  a{
+    text-decoration: none;
+    color: black;
   }
