--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -67,8 +67,14 @@
     display: flex;
     flex-direction: column;
   }
-
+  
   a{
     text-decoration: none;
     color: black;
   }
+
+  @media (min-width: 769px){
+    #sidebar-cont{
+      display: none;
+    }
+}
