--- a/src/styles/menu_responsive.css
+++ b/src/styles/menu_responsive.css
@@ -4,7 +4,7 @@
 
 .sticky-wrapper {
     position: relative;
-    height: 3rem; /* We need to change this value */
+    height: 120px; /* We need to change this value */
 }
   
 .sticky .sticky-inner {
@@ -13,10 +13,10 @@
     left: 0;
     right: 0;
     z-index: 1;
-    background-color: red;
-    color: white;
+    background-color: white;
     animation: moveDown 0.5s ease-in-out;
 }
+
 
 @keyframes moveDown {
     from {
@@ -26,6 +26,7 @@
       transform: translateY(0rem);
     }
   }
+
 
 @media (max-width: 324px) {
     .menu-image {
