--- a/src/components/header.css
+++ b/src/components/header.css
@@ -4,6 +4,12 @@ li{
     margin-right: 1rem;
 }
 
+.activeLinkClass{
+    border-bottom: 2px solid #0080fc;
+    padding-bottom: 2px;
+}
+
+
 a:hover{
     color: #0080fc;
 }
