--- a/src/styles/menu_responsive.css
+++ b/src/styles/menu_responsive.css
@@ -27,6 +27,12 @@
     }
   }
 
+.activeLinkClass{
+    border-bottom: 2px solid #0080fc;
+    padding-bottom: 2px;
+}
+
+
 
 @media (max-width: 324px) {
     .menu-image {
