--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -1,8 +1,8 @@
 .g_container{
     display: flex;
-    padding: 0px 20px;
+    padding-right: 20px;
+    padding-left: 20px;
     height: 100vh;
-    padding-top: 120px;
 }
 .about-image {
     width: 100%;
@@ -31,7 +31,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 0px 20px;
+        padding-right: 20px;
+        padding-left: 20px;
     }
     .about-image {
         height: 50vh;
