--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,7 +4,7 @@
 
 .sticky-container {
     position: relative;
-    height: 120px; /* We need to change this value */
+    height: 120px; 
 }
   
 .sticky .sticky-content {
@@ -32,6 +32,10 @@
     padding-bottom: 2px;
 }
 
+.pages-top-zone{
+    padding-top: 120px;
+}
+
 
 
 @media (max-width: 324px) {
@@ -41,6 +45,12 @@
     .menu-pages {
         display: flex;
         flex-direction: column;
+    }
+    .sticky-container {
+        height: 44px; 
+    }
+    .pages-top-zone{
+        padding-top: 44px;
     }
 }
 
@@ -52,6 +62,12 @@
         display: flex;
         flex-direction: column;
     }
+    .sticky-container {
+        height: 54px; 
+    }
+    .pages-top-zone{
+        padding-top: 54px;
+    }
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
@@ -61,5 +77,11 @@
     .menu-pages {
         display: flex;
         flex-direction: column;
+    }
+    .sticky-container {
+        height: 65px; 
+    }
+    .pages-top-zone{
+        padding-top: 65px;
     }
 }
