--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -5,8 +5,8 @@
     height: 100vh;
 }
 .about-image {
-    width: 100%;
-    height: 90vh;
+    width: 50%;
+    height: 80vh;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -23,6 +23,9 @@
 
 .text-container{
     margin-left: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 
@@ -35,6 +38,15 @@
         padding-left: 20px;
     }
     .about-image {
+        width: 100%;
         height: 50vh;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin: 20px;
+    }
+    .text-container{
+        margin: 0px;
+        padding: 20px;
     }
 }
