--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -28,7 +28,7 @@
   }
 
 .activeLinkClass{
-    border-bottom: 2px solid #0080fc;
+    border-bottom: 2px solid #262626;
     padding-bottom: 2px;
 }
 
