--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -2,7 +2,7 @@
     display: flex;
     padding-right: 20px;
     padding-left: 20px;
-    height: 100vh;
+    height: calc(100vh - 105px);
 }
 .about-image {
     width: 50%;
