--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -1,8 +1,12 @@
-
+.contact-container{
+    height: 100vh;
+}
 .info-container{
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 70px;
+    height: calc(100vh - 505px);
 }
 
 .info-grid{
@@ -18,5 +22,23 @@
         grid-template-columns: 1fr;
         grid-row-gap: 40px;
         text-align: center;
+    }
+}
+
+@media (max-width: 324px) {
+    .info-container{
+        height: calc(100vh - 444px);
+    }
+}
+
+@media (min-width: 325px) and (max-width: 480px) {
+    .info-container{
+        height: calc(100vh - 454px);
+    }
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+    .info-container{
+        height: calc(100vh - 465px);
     }
 }
