--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -42,3 +42,10 @@
         height: calc(100vh - 465px);
     }
 }
+
+@media screen and ( min-width: 850px ) and ( max-height: 2020px )
+{
+    .info-container{
+        height: calc(100vh - 355px);
+    }
+}
