--- a/src/assets/styles/pages/about.css
+++ b/src/assets/styles/pages/about.css
@@ -5,6 +5,7 @@
     height: 100vh
 }
 .about-image {
+    flex: 2;
     width: 155%;
     height: 75vh;
     background-size: cover;
@@ -22,12 +23,19 @@
 }
 
 .text-container{
+    padding: 0px 20px 0px 20px;
     margin-left: 40px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    flex: 1;
 }
 
+.about-text{
+    line-height: 30px;
+    padding: 0px 10px 0px 10px;
+    letter-spacing: 2px;
+}
 
 @media (max-width: 768px) {
     .g_container{
